# auth-demo

./: README.md
backend/: app.py  pyproject.toml  user.json
backend/db/: __init__.py  core.py  insert.py  select.py  test.db
backend/db/types/: User.py
backend/environment/: variables.py
backend/routes/: api.py
backend/routes/auth/: __init__.py  jwt.py  login.py  password.py  signup.py  user.py
